# FloatChat

./: client_service.py  embeddings.py  main.py  pyproject.toml  test.py
Frontend/: README.md  package-lock.json  package.json
Frontend/src/: App.jsx
Frontend/src/components/: MessageBox.jsx
Frontend/src/pages/: ChatPage.jsx
S/: client.py  newembed.py  ocean.json  ocean.py  query_chroma.py  tempCodeRunnerFile.py
chroma/3608ba36-35bd-4051-a681-e097c09fee6f/: index_metadata.pickle
data/: indian_bays.csv  indian_beaches.csv  indian_islands.csv  indian_lakes.csv  indian_rivers.csv
