[project]
name = "sih"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.21",
    "langchain-openai>=0.3.33",
    "mcp-use>=1.3.10",
    "mcp[cli]>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]
